--- a/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
@@ -1,6 +1,5 @@
 ﻿@using WebshopFrontend.Contracts
 @inject ICounterService CounterService
-@inject ICartService CartService
 
 @if (CartItems.Count == 0)
 {
@@ -47,22 +46,24 @@ else
 }
 
 @code {
-    private List<CartItemDto> CartItems { get; set; } = [];
+    [Inject(Key = "Local")] public ICartService LocalCartService { get; set; } = null!;
+    [Inject(Key = "Api")] public ICartService ApiCartService { get; set; } = null!;
 
     [Parameter] public EventCallback<bool> OnEmptyCart { get; set; }
 
     [CascadingParameter] private Task<AuthenticationState>? AuthenticationState { get; set; }
 
+    private List<CartItemDto> CartItems { get; set; } = [];
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            CartItems = await CartService.GetCart();
+            CartItems = await LocalCartService.GetCart();
             await UpdateUserCart();
             await InvokeAsync(StateHasChanged);
         }
-
-        if (CartItems.Count == 0)
+        if (CartItems.Count == 0 && firstRender)
         {
             await OnEmptyCart.InvokeAsync(true);
         }
@@ -93,9 +94,9 @@ else
 
     private async Task UpdateCartAsync()
     {
-        await CartService.UpdateCart(CartItems);
+        await LocalCartService.UpdateCart(CartItems);
         await UpdateUserCart();
-        CartItems = await CartService.GetCart();
+        CartItems = await LocalCartService.GetCart();
     }
 
     private void RemoveItem(CartItemDto cartItem)
@@ -129,7 +130,7 @@ else
         {
             var authState = await AuthenticationState;
             if (authState.User.Identity is not null && authState.User.Identity.IsAuthenticated)
-                await CartService.UpdateUserCart(CartItems);
+                await ApiCartService.UpdateCart(CartItems);
         }
     }
 }
