--- a/WebshopFrontend/Razor/_Imports.razor
+++ b/WebshopFrontend/Razor/_Imports.razor
@@ -13,3 +13,4 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using WebshopFrontend.Services
 @using System.Security.Claims
+@using WebshopFrontend.Contracts
