--- a/WebshopFrontend/Razor/Components/UserDetailsForm.razor
+++ b/WebshopFrontend/Razor/Components/UserDetailsForm.razor
@@ -1,5 +1,4 @@
-﻿@using WebshopShared.Validation
-@inject IUserService UserService
+﻿@inject IUserService UserService
 
 <div class="white border padding-x padding-y">
     <EditForm Model="UserDetails" OnValidSubmit="Submit" FormName="UserDetails">
