--- a/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
@@ -1,5 +1,4 @@
-﻿@using WebshopFrontend.Contracts
-@inject ICounterService CounterService
+﻿@inject ICounterService CounterService
 
 @if (CartItems.Count == 0)
 {
