--- a/WebshopFrontend/Razor/_Imports.razor
+++ b/WebshopFrontend/Razor/_Imports.razor
@@ -14,3 +14,5 @@
 @using WebshopFrontend.Services
 @using System.Security.Claims
 @using WebshopFrontend.Contracts
+@using WebshopFrontend.Services
+@using WebshopShared.Validation
