--- a/WebshopFrontend/Razor/Components/CartIcon.razor
+++ b/WebshopFrontend/Razor/Components/CartIcon.razor
@@ -1,5 +1,4 @@
-﻿@using WebshopFrontend.Contracts
-@inject ICounterService CounterService
+﻿@inject ICounterService CounterService
 
 <NavLink href="checkout" class="text-gray">
     <div class="cart">
