--- a/WebshopFrontend/Razor/Components/LoginBox.razor
+++ b/WebshopFrontend/Razor/Components/LoginBox.razor
@@ -56,7 +56,7 @@
 
     private RegisterLoginResponseDto _registerLoginResponseDto = new();
 
-    [Parameter] public EventCallback OnLogin { get; set; }
+    [Parameter] public EventCallback<bool> OnLogin { get; set; }
 
     private async Task LogIn()
     {
@@ -65,11 +65,12 @@
         if (_registerLoginResponseDto.Succeeded)
         {
             await UpdateCart();
+
         }
 
         if (_registerLoginResponseDto.Succeeded)
         {
-            await OnLogin.InvokeAsync();
+            await OnLogin.InvokeAsync(true);
         }
     }
 
