changed how add to cart worked

--- a/WebshopFrontend/Razor/Pages/Product/ProductPrice.razor
+++ b/WebshopFrontend/Razor/Pages/Product/ProductPrice.razor
@@ -14,7 +14,7 @@
         <Price Product="Product" FontSizePx="40"></Price>
     </div>
 
-    <AddToCartButton ProductId="Product.Id" Stock="Product.Stock.Quantity"></AddToCartButton>
+    <AddToCartButton Product="Product"></AddToCartButton>
 </div>
 
 @code {
