--- a/WebshopFrontend/Razor/Pages/Products/ProductPreview.razor
+++ b/WebshopFrontend/Razor/Pages/Products/ProductPreview.razor
@@ -18,7 +18,7 @@
     </NavLink>
 
     <div>
-        <AddToCartButton ProductId="Product.Id" Stock="Product.Stock.Quantity"></AddToCartButton>
+        <AddToCartButton Product="Product"></AddToCartButton>
     </div>
 
 
