--- a/WebshopFrontend/Razor/Layout/TopMenu.razor
+++ b/WebshopFrontend/Razor/Layout/TopMenu.razor
@@ -4,8 +4,12 @@
     </div>
 
     <div class="top-menu-search padding-x">
-        <input class="center-verticaly" type="text" />
+        
     </div>
+    
+    
+        <ExchangeRateSelector/>
+    
 
     <div class="padding-x">
         <CartIcon></CartIcon>
