--- a/WebshopFrontend/Razor/Pages/Checkout/OrderDetails.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/OrderDetails.razor
@@ -1,5 +1,6 @@
 ﻿@inject IOrderService OrderService
 @inject IUserService UserService
+@inject IExchangeRateService ExchangeRateService
 
 @if (Order == null)
 {
@@ -11,18 +12,18 @@ else
         <TableHeader>
             <th>Product</th>
             <th>ArNr</th>
-            <th>Price</th>
+            <th>Price<em class="text-small"> @ExchangeRate.Key</em></th>
             <th>Quantity</th>
         </TableHeader>
         <RowTemplate>
             <td data-label="Product">@orderLine.Name</td>
             <td data-label="ArtNr">@orderLine.ArtNr</td>
-            <td data-label="Price">@orderLine.Price</td>
+            <td data-label="Price">@((orderLine.Price * ExchangeRate.Value).ToString("N2"))</td>
             <td data-label="Quantity">@orderLine.Quantity</td>
         </RowTemplate>
         <TableFooter>
             <th colspan="3">Total: </th>
-            <td>@GetTotalPrice()</td>
+            <td>@GetTotalPrice().ToString("N2")</td>
         </TableFooter>
     </ProductTable>
 
@@ -54,6 +55,14 @@ else
     [Parameter] public int OrderId { get; set; }
     [Parameter] public OrderDto? Order { get; set; }
     [Parameter] public UserDetailsDto? UserDetails { get; set; }
+
+    private KeyValuePair<string, decimal> ExchangeRate { get; set; }
+
+    protected override void OnInitialized()
+    {
+        ExchangeRateService.ExchangeRateChanged += UpdatePrice;
+        ExchangeRate = ExchangeRateService.GetCurrentRate();
+    }
     
     protected override async Task OnParametersSetAsync()
     {
@@ -63,5 +72,21 @@ else
         UserDetails ??= await UserService.GetUserDetails();
     }
 
-    private decimal GetTotalPrice() => Order!.CartItems.Sum(x => x.Price * x.Quantity);
+    private decimal GetTotalPrice() => Order!.CartItems.Sum(x => x.Price * x.Quantity * ExchangeRate.Value);
+
+    private async void UpdatePrice(object? sender, KeyValuePair<string, decimal> exchangeRate)
+    {
+        try
+        {
+            await InvokeAsync(() =>
+            {
+                ExchangeRate = exchangeRate;
+                StateHasChanged();
+            });
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+        }
+    }
 }
